--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <h1>2048</h1>
     <hr>
-    <h2>Punti: <span id="punti">0</span></h2>
+    <h2>Punti: <span id="punti">0</span> Record: <span id="record">0</span></h2>
     <h2 id="tempo">Tempo: 00:00</h2>
     <button id="nuovoGioco">New Game</button>
     <div id="base">
         
     </div>
 </body>
-</html>
+</html>s
